# Streamify-CLI

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: technical-design.md
src/streamify/: __init__.py  __main__.py  cli.py  progress.py
src/streamify/auth/: __init__.py  bilibili.py  session.py
src/streamify/core/: downloader.py  url_router.py  ytdlp_backend.py
tests/: test_cli.py  test_url_router.py
