[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "streamify"
version = "0.1.0"
description = "Download Bilibili and YouTube videos from URL"
requires-python = ">=3.11"
dependencies = [
    "yt-dlp>=2024.0.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "curl_cffi>=0.10,<0.15",
    "qrcode>=7.4",
]

[project.scripts]
streamify = "streamify.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/streamify"]

[tool.pytest.ini_options]
testpaths = ["tests"]
